add class for author; add h2 to all result-lists

--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
@@ -49,7 +49,7 @@
               <?php $summAuthors = $this->driver->getPrimaryAuthors(); ?>
               <?php if (!empty($summAuthors)): ?>
                 <br>
-                <span>
+                <span class="authors">
                   <?=$this->transEsc('by')?>
                   <?php $authorCount = count($summAuthors); ?>
                   <?php foreach ($summAuthors as $i => $summAuthor): ?>
