--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -314,7 +314,14 @@ body.rtl {
   float: left;
   width: 50%;
 
-  .grid-body { flex: 1; }
+  .grid-body {
+    flex: 1;
+    h2 {
+      font-size: 13px;
+      line-height: @line-height-base;
+      margin: 0;
+    }
+  }
   .grid-checkbox {
     flex: 0 0 30px;
     min-width: 0;
