--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -225,6 +225,10 @@ header .container.navbar { margin-bottom: 0; }
     font-size: unset;
     line-height: $line-height-base;
     margin: 0;
+
+    .authors {
+      display: block;
+    }
   }
 }
 
