Revert "Fix minor style inconsistency."
This reverts commit 21dc050cef3d6a78e95e59919b7866a29b533e68.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -310,7 +310,7 @@ body.rtl {
     flex: 0 0 30px;
     min-width: 0;
   }
-  a.title {
+  .title {
     display: inline-block;
     font-weight: bold;
   }
