--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -310,7 +310,7 @@ body.rtl {
     flex: 0 0 30px;
     min-width: 0;
   }
-  a.title {
+  .title {
     display: inline-block;
     font-weight: bold;
   }
