Fix font size inconsistency.

--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -321,7 +321,7 @@ body.rtl {
   .grid-body {
     flex: 1;
     h2 {
-      font-size: 13px;
+      font-size: inherit;
       line-height: $line-height-base;
       margin: 0;
 
