--- a/themes/bootstrap3/templates/RecordDriver/EPF/result-list/full-text-links.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/EPF/result-list/full-text-links.phtml
@@ -6,8 +6,8 @@ if (isset($holdings) && !empty($holdings)): ?>
       foreach($holdings as $holding):
         if (!empty($holding)): ?>
           <li>
-            <a href="<?=$holding['URL']?>"><?=$holding['Name']?></a>
-            <?=$holding['CoverageStatement']?>
+            <a href="<?=$this->escapeHtmlAttr($holding['URL'])?>"><?=$this->escapeHtml($holding['Name'])?></a>
+            <?=$this->escapeHtml($holding['CoverageStatement'])?>
           </li>
         <?php endif;
       endforeach; ?>
