--- a/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
+++ b/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
@@ -2,11 +2,13 @@
 <?php if (!empty($account)): ?>
     <div class="suggested-librarian">
         <h4>Talk to a Subject Librarian</h4>
-        <a href="<?=$account->profile->url?>" target="_blank">
-            <img class="librarian-img" src="<?=$account->profile->image->url?>" />
-            <div class="librarian-name"><?=$account->first_name . ' ' . $account->last_name?></div>
+        <a href="<?=$this->escapeHtmlAttr($account->profile->url)?>" target="_blank">
+            <img class="librarian-img" src="<?=$this->escapeHtmlAttr($account->profile->image->url)?>" />
+            <div class="librarian-name"><?=$this->escapeHtml($account->first_name) . ' ' . $this->escapeHtml($account->last_name)?></div>
         </a>
-        <div class="librarian-title"><?=$account->title?></div>
+        <div class="librarian-title"><?=$this->escapeHtml($account->title)?></div>
+        <div class="librarian-email">
+            <a href="mailto:<?=$this->escapeHtmlAttr($account->email)?>"><?=$this->escapeHtml($account->email)?></a>
+        </div>
     </div>
-    <? /* echo print_r($account) */ ?>
 <?php endif; ?>
