--- a/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
+++ b/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
@@ -1,13 +1,13 @@
 <?php $account = $this->recommend->getResults(); ?>
 <?php if (!empty($account)): ?>
-  <div class="suggested-librarian">
-    <h4>Talk to a Subject Librarian</h4>
+  <div class="libguides-profile">
+    <h4><?=$this->transEsc('libguides_profile_suggestion_heading')?></h4>
     <a href="<?=$this->escapeHtmlAttr($account->profile->url)?>" target="_blank">
-      <img class="librarian-img" src="<?=$this->escapeHtmlAttr($account->profile->image->url)?>" />
-      <div class="librarian-name"><?=$this->escapeHtml($account->first_name) . ' ' . $this->escapeHtml($account->last_name)?></div>
+      <img class="libguides-profile-img" src="<?=$this->escapeHtmlAttr($account->profile->image->url)?>" />
+      <div class="libguides-profile-name"><?=$this->escapeHtml($account->first_name) . ' ' . $this->escapeHtml($account->last_name)?></div>
     </a>
-    <div class="librarian-title"><?=$this->escapeHtml($account->title)?></div>
-    <div class="librarian-email">
+    <div class="libguides-profile-title"><?=$this->escapeHtml($account->title)?></div>
+    <div class="libguides-profile-email">
       <a href="mailto:<?=$this->escapeHtmlAttr($account->email)?>"><?=$this->escapeHtml($account->email)?></a>
     </div>
   </div>
