--- a/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
+++ b/themes/bootstrap3/templates/Recommend/LibGuidesProfile.phtml
@@ -1,14 +1,20 @@
 <?php $account = $this->recommend->getResults(); ?>
-<?php if (!empty($account)): ?>
+<?php if (!empty($account) && !empty($account->profile->url) && !empty($account->first_name)): ?>
   <div class="libguides-profile">
     <h4><?=$this->transEsc('libguides_profile_suggestion_heading')?></h4>
     <a href="<?=$this->escapeHtmlAttr($account->profile->url)?>" target="_blank">
-      <img class="libguides-profile-img" src="<?=$this->escapeHtmlAttr($account->profile->image->url)?>" />
+      <?php if (!empty($account->profile->image)): ?>
+        <img class="libguides-profile-img" src="<?=$this->escapeHtmlAttr($account->profile->image->url)?>" />
+      <?php endif; ?>
       <div class="libguides-profile-name"><?=$this->escapeHtml($account->first_name) . ' ' . $this->escapeHtml($account->last_name)?></div>
     </a>
-    <div class="libguides-profile-title"><?=$this->escapeHtml($account->title)?></div>
-    <div class="libguides-profile-email">
-      <a href="mailto:<?=$this->escapeHtmlAttr($account->email)?>"><?=$this->escapeHtml($account->email)?></a>
-    </div>
+    <?php if (!empty($account->title)): ?>
+      <div class="libguides-profile-title"><?=$this->escapeHtml($account->title)?></div>
+    <?php endif; ?>
+    <?php if (!empty($account->email)): ?>
+      <div class="libguides-profile-email">
+        <a href="mailto:<?=$this->escapeHtmlAttr($account->email)?>"><?=$this->escapeHtml($account->email)?></a>
+      </div>
+    <?php endif; ?>
   </div>
 <?php endif; ?>
