use select_page for selecting all items on page (might be confusing?)

--- a/themes/bootstrap3/templates/holds/list.phtml
+++ b/themes/bootstrap3/templates/holds/list.phtml
@@ -28,7 +28,7 @@
           <div class="checkbox">
             <label>
               <input type="checkbox" name="selectAll" class="checkbox-select-all">
-              <?=$this->transEsc('select_all_on_page')?>
+              <?=$this->transEsc('select_page')?>
             </label>
             <?php if ($this->updateForm): ?>
               <div class="btn-group">
