--- a/themes/bootstrap3/templates/search/advanced/layout.phtml
+++ b/themes/bootstrap3/templates/search/advanced/layout.phtml
@@ -193,11 +193,12 @@
           <div class="facet-group">
             <div class="title"><?=$this->transEsc($field)?></div>
             <?php foreach ($data as $i => $value): ?>
+              <?php $operator = $value['operator'] ?? 'AND'; ?>
               <label class="facet checkbox">
-                <input class="checkbox-select-item" type="checkbox" checked="checked" name="filter[]" value="<?=$this->escapeHtmlAttr($this->operatorToFieldPrefix($value['operator']) . $value['field'] . ':"' . $value['value'] . '"')?>">
-                <?php if ($value['operator'] === 'NOT'): ?>
+                <input class="checkbox-select-item" type="checkbox" checked="checked" name="filter[]" value="<?=$this->escapeHtmlAttr($this->operatorToFieldPrefix($operator) . $value['field'] . ':"' . $value['value'] . '"')?>">
+                <?php if ($operator === 'NOT'): ?>
                   <?=$this->transEsc('NOT')?>
-                <?php elseif ($value['operator'] === 'OR' && $i > 0): ?>
+                <?php elseif ($operator === 'OR' && $i > 0): ?>
                   <?=$this->transEsc('OR')?>
                 <?php endif; ?>
                 <?=$this->escapeHtml($value['displayText'])?>
