--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -493,6 +493,12 @@ div.holding-notes {
   padding: 7px;
 }
 
+.od_download {
+    width: 100%;
+    border-width: 0px;
+    height: 450px;
+}
+
 .oauth2-prompt {
   ul {
     margin-top: 1rem;
