--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/status-full.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/status-full.phtml
@@ -17,26 +17,38 @@ foreach ($ids as $id) {
     $current = [];
     $current['status'] = "OK";
     $current['id'] = $id;
-    $avail = $this->result->data[$id] ?? new \stdClass();
+    $avail = $this->result->data[$id] ?? (object) array('code' => '');
+    $current['full_status'] = "";
 
     if ($noshow) {
-        $current['full_status'] = "";
+        //patron does not have access to overdrive. don't show avail
     } elseif ($isError || $avail->code == 'od_code_resource_not_found') {
         $current['error'] = $this->transEsc('status_unknown_message');
-        $current['full_status'] = "";
     } elseif ($loginForAvail || $avail->code == 'od_code_login_for_avail') {
         $current['full_status'] = "<p class='alert-info'>"
             . $this->transEsc('od_code_login_for_avail') . "</p>";
     } else {
-        $current['full_status'] = "<p><div class='copies'><strong>"
-            . $this->transEsc('od_avail_total') . "</strong> "
-            . $this->escapeHtml($avail->copiesOwned)
-            . "</div><div class='avail'><strong>"
-            . $this->transEsc('od_avail_avail') . "</strong> "
-            . $this->escapeHtml($avail->copiesAvailable)
-            . "</div><div class='holds'><strong>"
-            . $this->transEsc('od_avail_holds') . "</strong> "
-            . $this->escapeHtml($avail->numberOfHolds) . "</div></p>";
+        $current['full_status'] .= "<div class=\"availability\"><p>";
+        if ($avail->copiesAvailable > 0 ) {
+            $current['full_status'] .= "<span class=\"text-success\">";
+            $current['full_status'] .= $this->icon('status-available', 'icon-link__icon');
+            $current['full_status'] .= "</span> ";
+        } else {
+            $current['full_status'] .= "<span class=\"text-danger\">";
+            $current['full_status'] .= $this->icon('status-unavailable', 'icon-link__icon');
+            $current['full_status'] .= "</span> ";
+        }
+        if ($avail->availabilityType=="AlwaysAvailable") {
+            $current['full_status'] .= $this->transEsc("od_unlimited");
+        } else {
+            $current['full_status'] .= $avail->copiesAvailable . " / " . $avail->copiesOwned;
+        }
+        $current['full_status'] .= " " . $this->transEsc("od_copies_available");
+        if ($avail->numberOfHolds > 0 ) {
+            $current['full_status'] .= "; ".$avail->numberOfHolds
+              . " " . ($avail->numberOfHolds>1 ? $this->transEsc('od_people'): $this->transEsc('od_person')) 
+              . " " . $this->transEsc('od_waiting');
+        }
     }
     $data[] = $current;
 }
