fixed keyboard selection position for bootprint and searchbox width for small screens

--- a/themes/bootprint3/less/bootprint.less
+++ b/themes/bootprint3/less/bootprint.less
@@ -9,6 +9,7 @@
 @import "icons";
 @import "search";
 @import "forms";
+@import "keyboard";
 
 @brand-primary: #619144; /* a11y overrides @brand-primary in sass */
 @active-orange: #E70;
