fixed searchbox and keyboard selection button position in sandal

--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -132,7 +132,14 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-#searchForm { font-size: $reduced-font-size; }
+#searchForm {
+  font-size: $reduced-font-size;
+
+  .input-group .form-control:first-child {
+    border-top-right-radius: $input-border-radius;
+    border-bottom-right-radius: $input-border-radius;
+  }
+}
 #searchForm_lookfor,
 #searchForm_type { margin-bottom: 4px; }
 
