fixed colors for keyboards in sandal

--- a/themes/sandal/less/keyboard.less
+++ b/themes/sandal/less/keyboard.less
@@ -1,6 +1,22 @@
 .searchForm .keyboard-selection{
   top: 6px;
+
+  button.dropdown-toggle {
+    color: @input-color;
+    background-color: white;
+
+    &:hover, &:focus {
+      color: @input-color;
+      background-color: @header-light;
+    }
+
+  }
+
   .btn-primary{
     height: 20px;
   }
+}
+
+.keyboard-box{
+  color: @input-color;
 }
