new colors for buttons in bootprint and sandal

--- a/themes/bootprint3/less/keyboard.less
+++ b/themes/bootprint3/less/keyboard.less
@@ -1,5 +1,16 @@
 .searchForm .keyboard-selection{
   top: 6px;
+
+  button.dropdown-toggle {
+    color: @input-color;
+    background-color: white;
+
+    &:hover, &:focus {
+      color: white;
+      background-color: @brand-primary;
+    }
+  }
+
   .btn-primary{
     height: 20px;
   }
