--- a/themes/sandal/scss/keyboard.scss
+++ b/themes/sandal/scss/keyboard.scss
@@ -11,6 +11,9 @@
     }
   }
 
+  .dropdown-menu .active a,
+  .dropdown-menu .active a:hover { background-color: $header-bg; }
+
   .btn-primary{
     height: 20px;
   }
