reverted useless change

--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -132,9 +132,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-#searchForm {
-  font-size: $reduced-font-size;
-}
+#searchForm { font-size: $reduced-font-size; }
 #searchForm_lookfor,
 #searchForm_type { margin-bottom: 4px; }
 
